# linch

./: Cargo.toml  README.md  build_bin.sh
.github/workflows/: build_release_master.yml  build_release_tag.yml
src/: main.rs
