[package]
name = "linch"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colcon="0.1"
clap = { version = "4", features = ["derive"] }
eframe={version = "0.22", features=["wgpu"]}
egui_extras = {version = "0.22", features=["image", "svg"]}
lexical-sort="0.3"
regex="1"
walkdir = "2"

[profile.release]
strip = true
